Bug 70047 - Other: CTRL+mouse inconsistent copy/move behaviour in Slide Sorter
Summary: Other: CTRL+mouse inconsistent copy/move behaviour in Slide Sorter
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.5.2 release
Hardware: Other All
: medium normal
Assignee: Andrzej Hunt
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks: Slide-Sorter
  Show dependency treegraph
 
Reported: 2013-10-02 18:28 UTC by grofaty
Modified: 2017-09-24 01:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
corrent_mouse_icon_on_move_should_be.png (3.34 KB, image/png)
2013-10-02 18:28 UTC, grofaty
Details

Note You need to log in before you can comment on or make changes to this bug.
Description grofaty 2013-10-02 18:28:14 UTC
Created attachment 86999 [details]
corrent_mouse_icon_on_move_should_be.png

Case 1:
1. Open new presentation in Impress.
2. In Slides bar click on first slide and move mouse down.
What happens: First slide is copied to new slide.
Expected: Nothing should happen. Coping should be done using CTRL+mouse move.

Case 2:
3. Click on second slide and move mouse at the top.
What happens: Second slide is moved above the first slide.
This is expected, because no CTRL key was pressed. Working fine.

Case 3:
4. Click on first slide and press CTRL key and hold. Move mouse down the bottom.
What happens: Slide gets copied to third slide.
This is expected, because CTRL key is pressed. Working fine.

So Case 1 is strange inconsistent behaving - no CTRL pressed and new slide is copied. I think the Case 1 correct behavior is to display mouse icon with crossed circle and no action done - see attachment.
Operating System: Windows XP
Version: 4.0.5.2 release
Comment 1 Rob Snelders 2013-10-05 11:42:18 UTC
Confirmed with LO 4.1.1.2 on Ubuntu 13.04 x86_64
Comment 2 Andrzej Hunt 2013-11-04 10:25:02 UTC
(Patch now in gerrit awaiting review.)
Comment 3 Commit Notification 2013-11-20 13:20:23 UTC
Andrzej J.R. Hunt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d93433ba1181f5d8f6ded0ed0c103df10ebb1f22

fdo#70047 Only copy slides when CTRL key pressed.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.