fdo#70047 Only copy slides when CTRL key pressed.

The dragging logic is able to determine whether or not slides are
being moved or copied, previously it was forced into copying mode
if no unselected slides remain, which is the case when trying to
move a single existing slide (or all slides), whereas copying
mode should only be enabled with the CTRL key.

Change-Id: If219eb8e870ff201b71e655430828d906533fe04